@@ -19,6 +19,8 @@ if (action.equals("MODIFY")){
 	modify=true;
 	schedule.load(scheduleName);
 }
+
+String help;
 %>
 
 
@@ -44,13 +46,16 @@ if (action.equals("MODIFY")){
 
 		<tr><td class="data"> Minute </td>
 			<td class="data"> <input type="text" name="MINUTE" value="<%=schedule.getMinute()%>" size="25" maxlength="100">
-			<input type="button" class="buttonup" onclick="javascript:alert('Leave blank to use a random value')" value="?" onMouseOver="javascript:btndn(this);" onMouseOut="javascript:btnup(this);">				
+			<input type="button" class="buttonup" onclick="javascript:alert('Leave blank to use a random value between 0-59')" value="?" onMouseOver="javascript:btndn(this);" onMouseOut="javascript:btnup(this);">				
 			</td>
 		</tr>
 
 		<tr><td class="data"> Hour </td>
 			<td class="data"> <input type="text" name="HOUR" value="<%=schedule.getHour()%>" size="25" maxlength="100">
-			<input type="button" class="buttonup" onclick="javascript:alert('Leave blank to use a random value between 3-7 am')" value="?" onMouseOver="javascript:btndn(this);" onMouseOut="javascript:btnup(this);">				
+				<%
+				help="Leave blank to use a random value between 3-6 or specify a random start time range e.g. \\n 4|7 \\n 4:30|6 \\n 12:45|13:15";
+				%>
+			<input type="button" class="buttonup" onclick="javascript:alert('<%=help%>')" value="?" onMouseOver="javascript:btndn(this);" onMouseOut="javascript:btnup(this);">				
 			</td>
 		</tr>
 
